<resources>
    <string name="app_name">Check Indomaret</string>
    <string name="menu_promo">Promo</string>
    <string name="menu_login">Login</string>
    <string name="menu_location">Location</string>
    <string name="menu_new">New!</string>

    <!--Login-->
    <string name="nama">Name</string>
    <string name="address">Address</string>
    <string name="hp">No. HP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="member">Already a member? Login</string>
    <string name="akun">No account yet? Create one</string>
    <string name="registration">Please fill the registration on below!</string>

    <!--Promo-->
    <string name="promo">Promo</string>

    <!--New-->
    <string name="inew">Harga</string>

    <!--CS-->
    <string name="about">About</string>
    <string name="bantuan">Anda dapat menghubungi kami</string>
    <string name="def">Call Center Indomaret pada jam operasional Snin s/d Jumat pukul 08.00-17.00 WIB</string>
    <string name="number">(021) 1500 5580</string>


    <string name="cs">...Coming Soon...</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>


    <string name="infowindow_no_rating_yet">No Rating</string>

    <string name="title_activity_maps">Map</string>
</resources>
