<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:id="@+id/fragregis"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/color_blue">
        <ImageView
            android:id="@+id/homebar"
            android:layout_width="100dp"
            android:layout_height="?attr/actionBarSize"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/indologo"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:fontFamily="monospace"
            android:textSize="15dp"
            android:layout_marginRight="10dp"
            android:textAlignment="center"
            android:text="@string/registration"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/mfoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="5dp"
                android:scaleType="centerInside"
                android:background="@color/color_grey"
                android:cropToPadding="true"/>
            <ImageButton
                android:id="@+id/bfoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_grey"
                android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Name Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_name"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textPersonName"
                              android:textSize="15dp"
                              android:hint="@string/nama" />
                </android.support.design.widget.TextInputLayout>

                <!-- Address Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_address"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textPostalAddress"
                              android:textSize="15dp"
                              android:hint="@string/address" />
                </android.support.design.widget.TextInputLayout>

                <!-- mobile number -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_mobile"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="number"
                              android:textSize="15dp"
                              android:hint="@string/hp" />
                </android.support.design.widget.TextInputLayout>

                <!-- Username Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_username"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="15dp"
                              android:hint="@string/username"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_pass"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textPassword"
                              android:textSize="15dp"
                              android:hint="@string/password"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Signup Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="Create Account"/>

                <TextView android:id="@+id/link_login"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="24dp"
                          android:text="@string/member"
                          android:gravity="center"
                          android:textSize="16dip"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>